QA feedback: stop icon wrapping to next line

--- a/corehq/apps/style/static/style/less/components/forms.less
+++ b/corehq/apps/style/static/style/less/components/forms.less
@@ -26,7 +26,7 @@ select[size^=""] {
 }
 
 .control-label .inner-control-label {
-    display: inline-block;
+    display: inline;
     vertical-align: middle;
 }
 
